--- a/404.html
+++ b/404.html
@@ -20,6 +20,11 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Page not found </strong></p>
+  <p>The requested page could not be found.
+      
+      <i>
+          If you feel like this shouldn't have happened, I'd be very grateful if you would <a href="mailto:{{ site.email }}">send me</a> a quick explanation of what happened.
+      </i>
+  </p>
 </div>
