✨ feat(theme): implement changes for current minima theme
also adds permanent link for resume

--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@ layout: default
   <p>The requested page could not be found.
       
       <i>
-          If you feel like this shouldn't have happened, I'd be very grateful if you would <a href="mailto:{{ site.email }}">send me</a> a quick explanation of what happened.
+          If you feel like this shouldn't have happened, I'd be very grateful if you would <a href="mailto:{{ site.author.email }}">send me</a> a quick explanation of what happened.
       </i>
   </p>
 </div>
